Added a intermediate connectdialog save button.

--- a/qt-client/dmp_client_connect_dialog.ui
+++ b/qt-client/dmp_client_connect_dialog.ui
@@ -45,6 +45,13 @@
          </widget>
         </item>
         <item>
+         <widget class="QToolButton" name="SaveButton">
+          <property name="text">
+           <string>Save</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="horizontalSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -366,6 +373,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>SaveButton</sender>
+   <signal>clicked()</signal>
+   <receiver>DmpClientConnectDialog</receiver>
+   <slot>saveToConfig()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>144</x>
+     <y>23</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>304</x>
+     <y>154</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>inputChanged()</slot>
@@ -376,5 +399,6 @@
   <slot>nameChanged(QString)</slot>
   <slot>hostChanged(QString)</slot>
   <slot>portChanged(QString)</slot>
+  <slot>saveToConfig()</slot>
  </slots>
 </ui>
