Fixes the "Next" bug after the latest gui rewrite to add a volume slider.

--- a/qt-client/dmp_client_gui.ui
+++ b/qt-client/dmp_client_gui.ui
@@ -543,7 +543,7 @@
   </connection>
   <connection>
    <sender>playButton</sender>
-   <signal>toggled(bool)</signal>
+   <signal>clicked(bool)</signal>
    <receiver>DmpClientGui</receiver>
    <slot>PlayPauseToggled(bool)</slot>
    <hints>
@@ -655,7 +655,7 @@
   </connection>
   <connection>
    <sender>muteButton</sender>
-   <signal>toggled(bool)</signal>
+   <signal>clicked(bool)</signal>
    <receiver>DmpClientGui</receiver>
    <slot>MuteToggled(bool)</slot>
    <hints>
