Synchronized volume slider with last saved config value and the gui.

--- a/qt-client/dmp_client_gui.ui
+++ b/qt-client/dmp_client_gui.ui
@@ -639,7 +639,7 @@
   </connection>
   <connection>
    <sender>volumeSlider</sender>
-   <signal>valueChanged(int)</signal>
+   <signal>sliderMoved(int)</signal>
    <receiver>DmpClientGui</receiver>
    <slot>VolumeChanged(int)</slot>
    <hints>
