--- a/qt-client/dmp_client_gui.ui
+++ b/qt-client/dmp_client_gui.ui
@@ -313,11 +313,11 @@
     <addaction name="actionConnect"/>
     <addaction name="actionExit"/>
    </widget>
-   <widget class="QMenu" name="menuIndex">
+   <widget class="QMenu" name="menuEdit">
     <property name="title">
-     <string>Index</string>
+     <string>Edit</string>
     </property>
-    <addaction name="actionIndex_Folder"/>
+    <addaction name="actionLibrary"/>
    </widget>
    <widget class="QMenu" name="menuPlayList">
     <property name="title">
@@ -326,7 +326,7 @@
     <addaction name="actionQueueSelected"/>
    </widget>
    <addaction name="menuFile"/>
-   <addaction name="menuIndex"/>
+   <addaction name="menuEdit"/>
    <addaction name="menuPlayList"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -362,6 +362,11 @@
     <string>Q</string>
    </property>
   </action>
+  <action name="actionLibrary">
+   <property name="text">
+    <string>Library</string>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -378,7 +383,7 @@
    <extends>QMenuBar</extends>
    <header>dmp_client_gui_menu_bar.hpp</header>
    <slots>
-    <slot>indexFolder()</slot>
+    <slot>editLibrary()</slot>
    </slots>
   </customwidget>
   <customwidget>
@@ -433,10 +438,10 @@
    </hints>
   </connection>
   <connection>
-   <sender>actionIndex_Folder</sender>
+   <sender>actionLibrary</sender>
    <signal>triggered()</signal>
    <receiver>menu_bar</receiver>
-   <slot>indexFolder()</slot>
+   <slot>editLibrary()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
