--- a/qt-client/library_dialog.ui
+++ b/qt-client/library_dialog.ui
@@ -73,7 +73,7 @@
        </layout>
       </item>
       <item>
-       <widget class="QListWidget" name="listWidget"/>
+       <widget class="QListWidget" name="LibraryList"/>
       </item>
      </layout>
     </item>
@@ -95,24 +95,24 @@
       <item>
        <layout class="QFormLayout" name="formLayout">
         <item row="1" column="0">
-         <widget class="QLabel" name="label">
+         <widget class="QLabel" name="PathLabel">
           <property name="text">
            <string>Path:</string>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
-         <widget class="QLineEdit" name="lineEdit"/>
+         <widget class="QLineEdit" name="PathEdit"/>
         </item>
         <item row="0" column="0">
-         <widget class="QLabel" name="label_2">
+         <widget class="QLabel" name="NameLabel">
           <property name="text">
            <string>Name:</string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QLineEdit" name="lineEdit_2"/>
+         <widget class="QLineEdit" name="NameEdit"/>
         </item>
        </layout>
       </item>
@@ -200,9 +200,93 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>LibraryList</sender>
+   <signal>itemSelectionChanged()</signal>
+   <receiver>LibraryDialog</receiver>
+   <slot>selectionChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>153</x>
+     <y>173</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>300</x>
+     <y>178</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>NameEdit</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>LibraryDialog</receiver>
+   <slot>inputChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>468</x>
+     <y>145</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>300</x>
+     <y>178</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>PathEdit</sender>
+   <signal>textChanged(QString)</signal>
+   <receiver>LibraryDialog</receiver>
+   <slot>inputChanged()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>468</x>
+     <y>173</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>300</x>
+     <y>178</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>NameEdit</sender>
+   <signal>textEdited(QString)</signal>
+   <receiver>LibraryDialog</receiver>
+   <slot>nameChanged(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>468</x>
+     <y>145</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>300</x>
+     <y>178</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>PathEdit</sender>
+   <signal>textEdited(QString)</signal>
+   <receiver>LibraryDialog</receiver>
+   <slot>pathChanged(QString)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>468</x>
+     <y>173</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>300</x>
+     <y>178</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>addPressed()</slot>
   <slot>deletePressed()</slot>
+  <slot>selectionChanged()</slot>
+  <slot>nameChanged(QString)</slot>
+  <slot>pathChanged(QString)</slot>
+  <slot>inputChanged()</slot>
  </slots>
 </ui>
