--- a/qt-client/library_dialog.ui
+++ b/qt-client/library_dialog.ui
@@ -101,9 +101,6 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="1">
-         <widget class="QLineEdit" name="PathEdit"/>
-        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="NameLabel">
           <property name="text">
@@ -113,6 +110,20 @@
         </item>
         <item row="0" column="1">
          <widget class="QLineEdit" name="NameEdit"/>
+        </item>
+        <item row="1" column="1">
+         <layout class="QHBoxLayout" name="horizontalLayout_3">
+          <item>
+           <widget class="QLineEdit" name="PathEdit"/>
+          </item>
+          <item>
+           <widget class="QToolButton" name="folderSelectButton">
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
         </item>
        </layout>
       </item>
@@ -280,6 +291,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>folderSelectButton</sender>
+   <signal>clicked()</signal>
+   <receiver>LibraryDialog</receiver>
+   <slot>folderSelectButtonClicked()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>571</x>
+     <y>173</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>300</x>
+     <y>178</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>addPressed()</slot>
@@ -288,5 +315,6 @@
   <slot>nameChanged(QString)</slot>
   <slot>pathChanged(QString)</slot>
   <slot>inputChanged()</slot>
+  <slot>folderSelectButtonClicked()</slot>
  </slots>
 </ui>
