--- a/qt-client/dmp_client_gui.ui
+++ b/qt-client/dmp_client_gui.ui
@@ -782,6 +782,22 @@
     </hint>
    </hints>
   </connection>
+  <connection>
+   <sender>radio_list</sender>
+   <signal>setPlayingChecked(bool)</signal>
+   <receiver>playButton</receiver>
+   <slot>setChecked(bool)</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>139</x>
+     <y>228</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>135</x>
+     <y>39</y>
+    </hint>
+   </hints>
+  </connection>
  </connections>
  <slots>
   <slot>searchBarReturned()</slot>
