Adds a test for encrypted connections.

--- a/qt-client/dmp_client_connect_dialog.ui
+++ b/qt-client/dmp_client_connect_dialog.ui
@@ -179,6 +179,15 @@
    </layout>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>Servers</tabstop>
+  <tabstop>NameEdit</tabstop>
+  <tabstop>HostEdit</tabstop>
+  <tabstop>PortEdit</tabstop>
+  <tabstop>AddButton</tabstop>
+  <tabstop>DeleteButton</tabstop>
+  <tabstop>SaveButton</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
